# tic-hask-toe

./: .gitignore  LICENSE  README.md  ultimate-tic-hask-toe.cabal
src/: Game.hs  MCTS.hs  MCTSOrdinary.hs  Main.hs  Rules.hs  Tests.hs  TicUI.hs  TreeZipper.hs
