cabal-version:      2.4
name:               ultimate-tic-hask-toe
version:            1.0
synopsis:           A simple ultimate tic-tac-toe engine
description:        See README.md
license:            MIT License
license-file:       LICENSE
author:             Stefano Ariotta
maintainer:         32983967+st-ario@users.noreply.github.com
copyright:          2020, Stefano Ariotta

executable ultimate-tic-hask-toe
    main-is:    Main.hs
    other-modules:
        Game
        MCTS
        Rules
        TicUI
        TreeZipper
    ghc-options:
        -threaded
        -rtsopts
        -with-rtsopts=-N4
        -O2
        -fprof-auto
        -- -fllvm
        -fexcess-precision
        -optc-ffast-math
        -optc-O3
    build-depends:
        base >=4.14.1.0 && < 5
      , containers
      , extra
      , lens
      , monad-loops
      , random >=1.2
      , vector
    hs-source-dirs:   src
    default-language: Haskell2010
